--- a/docs/index.css
+++ b/docs/index.css
@@ -8,6 +8,7 @@
     border: 1px solid #ccc;
     padding: 10px;
     margin-bottom: 10px;
+    margin-right: 10px;
 }
 .inputs{
     border: 1px solid #ccc;
